Revert "Fix icon alignment"
This reverts commit 64771de60207ad077eb81ac941a4aa3367e3c2bd.

--- a/assets/stylesheets/foundation.css
+++ b/assets/stylesheets/foundation.css
@@ -1306,7 +1306,7 @@ blockquote p {
     display: inherit !important; } }
 button, .button, .multipleTemplateAdder {
   border-style: solid;
-  border-width: 0px;
+  border-width: 1px;
   cursor: pointer;
   font-family: inherit;
   font-weight: bold;
